# startup-success-predictor

backend/: main.py  pyproject.toml
data/: startup_data_processed.csv
model/: classification_model.py  random_forest_model.joblib
notebooks/: 01_EDA.ipynb  02_Preprocessing_Modeling.ipynb
